# Max_Entropy_Python

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Plotter_P2_1.py  Plotter_P2_2.py  README.md  Singularity  build.sh  machine_learning_functions.py  machine_learning_functions_test_par.py  max_entropy_functions.py  requirements.txt
Basic_Functions/: machine_learning_functions.py  machine_learning_functions_test_par.py  max_entropy_functions.py  max_entropy_functions_old.py
GLUCONEOGENESIS/: GLUCONEOGENESIS.keq  GLUCONEOGENSIS.py  activities_method2.txt  complete_final_map_gluconeogenesis.json  complete_model_gamma9_n3_k=15_1.pth  complete_model_gamma9_n3_k=15_2.pth  episodic_loss.txt  episodic_loss_gamma9_n3_k15_3.txt  episodic_loss_gamma9_n3_k=15_1.txt  episodic_loss_max_gamma9_n3_k15_3.txt  episodic_loss_max_gamma9_n3_k=15_1.txt  episodic_reward.txt  episodic_reward_gamma9_n3_k15_3.txt  episodic_reward_gamma9_n3_k=15_1.txt  epr_per_state_gamma9_n3_k15_3.txt  final_states_gamma9_n3_k15_3.txt  gluconeogenesis_all_reactions.json  gluconeogenesis_kq_alpha_data.json  metabolite_bigg.pickle  model.pth  regulated_activities_data.json  regulated_flux_data.json  regulated_kq_data.json
GLYCOLYSIS_TCA_GOGAT/: .travis.yml  GLYCOLYSIS_TCA_GOGA.keq  GLYCOLYSIS_TCA_GOGAT.py  GLYCOLYSIS_TCA_GOGAT_FUNCTION.py  SBATCH.sh  SBATCH_cascade.sh  activities_method2.txt  complete_model.pth  complete_model_gly_tca_gog_gamma9_n3_k=15_1.pth  cpu_tca_glycolysis_10_n6_nodata.o457636  cpu_tca_glycolysis_11_n6_nodata.o457637  cpu_tca_glycolysis_12_n6_nodata.o457639  cpu_tca_glycolysis_13_n6_nodata.o457640  cpu_tca_glycolysis_14_n6_nodata.o457642  cpu_tca_glycolysis_15_n6_nodata.o457643  cpu_tca_glycolysis_1_n6_nodata.o457620  cpu_tca_glycolysis_2_n6_nodata.o457622  cpu_tca_glycolysis_3_n6_nodata.o457625  cpu_tca_glycolysis_4_n6_nodata.o457627  cpu_tca_glycolysis_5_n6_nodata.o457664  cpu_tca_glycolysis_6_n6_nodata.o457631  cpu_tca_glycolysis_7_n6_nodata.o457633  cpu_tca_glycolysis_8_n6_nodata.o457634  cpu_tca_glycolysis_9_n6_nodata.o457635  episodic_loss.txt  episodic_loss_gly_tca_gog_gamma9_n3_k=15_1.txt  episodic_loss_max_gly_tca_gog_gamma9_n3_k=15_1.txt  episodic_reward.txt  episodic_reward_gly_tca_gog_gamma9_n3_k=15_1.txt  glycolysis_tca_gogat_test.py  gpu_tca_glycolysis_1_n8_nodata.o457621.1  gpu_tca_glycolysis_2_n8_nodata.o457623.1  gpu_tca_glycolysis_3_n8_nodata.o457624.1  gpu_tca_glycolysis_4_n8_nodata.o457628.1  gpu_tca_glycolysis_5_n8_nodata.o457629.1  model.pth  model_temp_error0.08404876634640279_.pth  model_temp_error0.1287523362976496_.pth  model_temp_error0.8156773012846927_.pth  model_temp_error0.836285045271061_.pth  (+4 more)
TCA_PPP_GLYCOLYSIS_CELLWALL/: CELLWALLFUNCTION.py  SBATCH.sh  TCA_PPP_GLYCOLYSIS_CELLWALL.py  TCA_PPP_GLYCOLYSIS_CELLWALL_FUNCTION.py  TCA_PPP_Glycolysis.keq  TCA_PPP_Glycolysis_CellWall3b.dg0  complete_final_map.json  cpu_cellwall_10_n10_nodata.o445205  cpu_cellwall_10_n12_nodata.o445315  cpu_cellwall_10_n14_nodata.o445335  cpu_cellwall_10_n16_nodata.o445336  cpu_cellwall_10_n6_nodata.o444920  cpu_cellwall_10_n8_nodata.o444991  cpu_cellwall_1_n10_nodata.o445004  (+68 more)
potential_step_module/: .module.cpp.swp  CMakeLists.txt  LM_test.cpp  module.cpp
potential_step_module/include/: helper_functions.hpp
potential_step_module/pstep/: helper_functions.hpp  max_entropy_functions.hpp
potential_step_module/share/pkgconfig/: eigen3.pc
potential_step_module/tests/: CMakeLists.txt  driver.cpp  is_py3.py  test_call.py  test_import.py
potential_step_module/tests/test_cases/matrix-market/: Keq_constant.txt  P_mat.mtx  R_mat.mtx  S_mat.mtx  f_log_counts.txt  results.mtx  state.txt  v_log_counts.txt
potential_step_module/tests/test_cases/pickle/: inputs.p  results.p
(+965 files in other folders)
